--- a/recipes.html
+++ b/recipes.html
@@ -41,6 +41,7 @@
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script defer src="recipes.js"></script>
 </body>
 
 </html>
