Html name change for URL function

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <div class="row center-align">
                                 <div class="col s12">
                                     <a class="pulse btn wow animated" id="movie-search-button" onclick="nextPage()">Movies</a>
-                                    <a class="pulse btn wow animated left-align" id="game-search-button"onclick="nextPage()">Console Games</a>
+                                    <a class="pulse btn wow animated left-align" id="game-search-button"onclick="nextPage()">Games</a>
                                     <a class="pulse btn wow animated right-align" id="food-search-button" onclick="nextPage()">Food</a>
                                   
                                 </div>
