Added more parameters

--- a/games.html
+++ b/games.html
@@ -36,6 +36,7 @@
         <button type="submit" id = "gameSearch"><i class="fa fa-search"></i></button>
     </form>
     <div id = "results"></div>
+    <button 
     <script defer src="game-script.js"></script>
 </body>
 </html>
