show list of recipe search results

--- a/recipes.html
+++ b/recipes.html
@@ -37,7 +37,7 @@
                 <label for="ingredient-search-input">Have some ingredients you want to use? List them here:</label>
                 <input type="text" class="form-control" id="ingredient-search-input" placeholder="ingredient 1, ingredient 2">
             </div>
-            <button type="submit" class="btn btn-primary mb-2">Search</button>
+            <button type="submit" id="search-recipe-btn" class="btn btn-primary mb-2">Search</button>
         </form>
 
         <p>OR</p>
