--- a/movies.html
+++ b/movies.html
@@ -11,31 +11,30 @@
 <body>
     <h1>Movies</h1>
     <form>
-        <input type = "text" placeholder = "Title" id = "title">
-        <p>Dates</p>
         <input type = "text" placeholder = "Year" id = "year">
         <br>
         <select id="genre" name="genres">
                 <option value="Genre">Genre</option>
                 <option value="None">None</option>
-                <option value="Action">Action</option>
-                <option value="Adventure">Adventure</option>
-                <option value="Comedy">Comedy</option>
-                <option value="Crime">Crime</option>
-                <option value="Drama">Drama</option>
-                <option value="Fantasy">Fantasy</option>
-                <option value="Historical">Historical</option>
-                <option value="Historical Fiction">Historical Fiction</option>
-                <option value="Horror">Horror</option>
-                <option value="Mystery">Mystery</option>
-                <option value="Political">Political</option>
-                <option value="Romance">Romance</option>
-                <option value="Satire">Satire</option>
-                <option value="Science Fiction">Science Fiction</option>
-                <option value="Social">Social</option>
-                <option value="Thriller">Thriller</option>
-                <option value="Urban">Urban</option>
-                <option value="Western">Western</option>
+                <option value="28">Action</option>
+                <option value="12">Adventure</option>
+                <option value="35">Comedy</option>
+                <option value="80">Crime</option>
+                <option value="18">Drama</option>
+                <option value="14">Fantasy</option>
+                <option value="16">Animation</option>
+                <option value="99">Documentary</option>
+                <option value="27">Horror</option>
+                <option value="9648">Mystery</option>
+                <option value="36">History</option>
+                <option value="10751">Family</option>
+                <option value="10749">Romance</option>
+                <option value="10402">Music</option>
+                <option value="10770">TV Movie</option>
+                <option value="10752">War</option>
+                <option value="53">Thriller</option>
+                <option value="37">Western</option>
+                <option value="878">Science Fiction</option>
         </select>
         <select id="searchBy" name="searchBy">
                 <option value="Popularity">Popularity</option>
@@ -43,9 +42,12 @@
                 <option value="Alphabetically(Z-A)">Alphabetically(Z-A)</option>
                 <option value="Release Date(new-old)">Release Date(new-old)</option>
                 <option value="Release Date(old-new)">Release Date(old-new)</option>
-                <option value="Rating">Rating</option>
+                <option value="Revenue">Revenue</option>
         </select>
         <button type="submit" id = "movieSearch"><i class="fa fa-search"></i></button>
+        <h2>OR</h2>
+        <input type = "text" placeholder = "Title" id = "title">
+        <button type="submit" id = "movieTitleSearch"><i class="fa fa-search"></i></button>
     </form>
     <div id = "results"></div>
     <div id = "pages"></div>
