Added random button to both games and movie files

--- a/games.html
+++ b/games.html
@@ -49,6 +49,7 @@
         </select>
         <input type = "text" placeholder = "# of Results(max = 40)" id = "resultsNum">
         <button type="submit" id = "gameSearch"><i class="fa fa-search"></i></button>
+        <button id = "randomButton">Random</button>
     </form>
     <div id = "results"></div>
     <div id = "pages"></div>
