--- a/movies.html
+++ b/movies.html
@@ -45,7 +45,8 @@
                 <option value="Revenue">Revenue</option>
         </select>
         <button type="submit" id = "movieSearch"><i class="fa fa-search"></i></button>
-        <h2>OR</h2>
+        <button id = "randomButton">Random</button>
+        <h4>OR</h4>
         <input type = "text" placeholder = "Title" id = "title">
         <button type="submit" id = "movieTitleSearch"><i class="fa fa-search"></i></button>
     </form>
