implemented changes to recipe page  styling

--- a/recipes.html
+++ b/recipes.html
@@ -11,23 +11,23 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="recipe.style.css">
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <header class="jumbotron">
-        <h1 class="display-4" style= color:teal>L.I.F.E.</h1>
-        <h4 style= color:teal>Living Inside For Ever</h4>
+        <h1 class="display-4"> <span style="color:blue">L.</span><span style="color:red">I.</span></span><span style="color:yellowgreen">F.</span><span style="color:orange">E.</span></h1>
+        <h4><span style= "color:blue">L</span><span style="color:white">iving</span> <span style="color:red">I</span><span style="color:white">nside </span><span style="color:white"></span><span style= "color:yellowgreen">F</span><span style="color:white">or <span style="color:orange">E</span><span style="color:white">ver</h4>
         <br>
-        <h5 style= color:teal>Sometimes you just need options</h5>
+        <h5 style= color:white>Sometimes you just need options other than cereal <i class="fas fa-grin-wink" style="color:yellow"></i></h5>
         
       </header>
 </head>
 <body>
     <div id="random-recipe" class="container">
-        <button id="random-recipe-btn">Show me a recipe</button>
+        <button class="pulse btn wow animated" id="random-recipe-btn">Show me a recipe</button>
     </div>
 
     <!--Import jQuery before materialize.js-->
@@ -35,7 +35,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script defer src="recipes.js"></script>
