Added page numbers

--- a/movies.html
+++ b/movies.html
@@ -52,6 +52,7 @@
         <button type="submit" id = "movieTitleSearch"><i class="fa fa-search"></i></button>
     </form>
     <div id = "results"></div>
+    <p id = "pageTag"></p>
     <div id = "pages"></div>
     <script defer src="movies-script.js"></script>
 </body>
