--- a/games.html
+++ b/games.html
@@ -70,6 +70,7 @@
 
 
     <div id = "results"></div>
+    <p id = "pageTag"></p>
     <div id = "pages"></div>
     <script defer src="game-script.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
