add message if no results found

--- a/recipes.html
+++ b/recipes.html
@@ -42,6 +42,8 @@
 
     <button id="random-recipe-btn" class="pulse btn wow animated">Show me a random recipe</button>
 
+    <p id="error-message"></p>
+
     <div id="recipe-previews"></div>
 
     <div id="recipe-display"></div>
