--- a/movies.html
+++ b/movies.html
@@ -13,6 +13,7 @@
     <h1>Movies</h1>
     <form>
         <input type = "text" placeholder = "Year" id = "year">
+        <div id = "error" style = "color: red"></div>
         <br>
         <select id="genre" name="genres">
                 <option value="Genre">Genre</option>
