Proper button functions

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1> <span style="color:blue">L.</span><span style="color:red">I.</span></span><span style="color:yellowgreen">F.</span><span style="color:orange">E.</span></h1>
         <h4><span style= "color:blue">L</span><span style="color:white">iving</span> <span style="color:red">I</span><span style="color:white">nside </span><span style="color:white"></span><span style= "color:yellowgreen">F</span><span style="color:white">or <span style="color:orange">E</span><span style="color:white">ver</h4>
         <br>
-        <h5 style= color:white>Sometimes you just need options other than cereal <i class="fas fa-grin-wink" style="color:yellow"></i></h5>
+        <h5 style= color:white>Life is no fun without options <i class="fas fa-grin-wink" style="color:yellow"></i></h5>
         
       </header>
 </head>
@@ -65,10 +65,6 @@
                                             <li>
                                                 <i class="fa-li fa fa-check"></i>
                                                 <a href="ttps://api.rawg.io/api/games?dates=" target="_blank">Rawg.io Game Search API</a>
-                                            </li>
-                                            <li>
-                                                <i class="fa-li fa fa-check"></i>
-                                                <a href="https://momentjs.com/" target="_blank">Moment.js</a>
                                             </li>
                                             <li>
                                                 <i class="fa-li fa fa-check"></i>
