consolidate stylesheets into single css file

--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
-    <link rel="stylesheet" href="game.style.css">
+    <link rel="stylesheet" href="style.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 <body>
     <header class="jumbotron">
-        <h1> <span style="color:blue">L.</span><span style="color:red">I.</span><span style="color:yellowgreen">F.</span><span style="color:orange">E.</span></h1>
+        <h1><span style="color:blue">L.</span><span style="color:red">I.</span><span style="color:yellowgreen">F.</span><span style="color:orange">E.</span></h1>
         <h4><span style= "color:blue">L</span>iving <span style="color:red">I</span>nside <span style= "color:yellowgreen">F</span>or <span style="color:orange">E</span>ver</h4>
         <br>
         <h5>Sometimes you just need options other than cereal <i class="fas fa-grin-wink" style="color:yellow"></i></h5>
@@ -52,7 +51,7 @@
                             <hr>
                             <div class="row"> 
                                 <div class="col s12 m6">
-                                    <h6 style= color:white>Technologies used:</h6>
+                                    <h6>Technologies used:</h6>
                                     <ul class="fa-ul">
                                         <li>
                                             <i class="fa-li fa fa-check"></i>
@@ -83,7 +82,7 @@
                                 </div>
                               
                                 <div class="col s12 m6">
-                                    <h6 style= color:white>Built by:</h6>
+                                    <h6>Built by:</h6>
                                     <ul class="fa-ul">
                                         <li>
                                             <i class="fa-li fa fa-github"></i>
