--- a/movies.html
+++ b/movies.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width", initial-scale="1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <title>L.I.F.E. - Movies</title>
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="movies.style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="jumbotron">
@@ -23,8 +23,8 @@
     <div class="container">
         <h4>Search by:</h4>
         <form>
-            <input type = "text" placeholder = "Year" id = "year">
-            <div id = "error" style = "color: red"></div>
+            <input type="text" placeholder="Year" id="year">
+            <div id="error" style="color: red"></div>
             <br>
             <div class="input-field">
                 <select id="genre" name="genres">
@@ -51,7 +51,6 @@
                     <option value="878">Science Fiction</option>
                 </select>
             </div>
-            <!-- <input placeholder= ""> -->
             <select id="searchBy" name="searchBy">
                 <option value="Popularity">Popularity</option>
                 <option value="Alphabetically(A-Z)">Alphabetically(A-Z)</option>
