--- a/games.html
+++ b/games.html
@@ -85,6 +85,9 @@
         function goBack() {
             window.history.back();
         }
+        $(document).ready(function () {
+            $("select").material_select();
+        });
     </script>
 </body>
 </html>
