--- a/recipes.html
+++ b/recipes.html
@@ -55,12 +55,7 @@
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="recipes.js"></script>
-
-    <script>
-        function goBack() {
-          window.history.back();
-        }
-    </script>
+    <script src="script.js"></script>
 
 </body>
 
