--- a/movies.html
+++ b/movies.html
@@ -77,7 +77,7 @@
         <button class="pulse btn wow animated" id="back-button" onclick="goBack()">Back</button>
     </div>
 
-    <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
