edit button styles

--- a/games.html
+++ b/games.html
@@ -62,8 +62,8 @@
             </select>
             <input type="text" placeholder="# of Results(max = 40)" id="resultsNum">
             <div id="error" style="color: red"></div>
-            <button type="submit" id="gameSearch" class="pulse btn wow animated"><i class="fa fa-search"></i></button>
-            <button id = "randomButton" class="pulse btn wow animated">Random</button>
+            <button type="submit" id="gameSearch" class="btn"><i class="fa fa-search"></i></button>
+            <button id = "randomButton" class="btn">Random</button>
         </form>
         
         
@@ -72,7 +72,7 @@
         <div id="pages"></div>
 
         <br><br>
-        <button class="pulse btn wow animated" id="back-button" onclick="goBack()">Back</button>
+        <button class="btn" id="back-button" onclick="goBack()">Back</button>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
