--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                             </div>
                             <div class="row center-align">
                                 <div class="col s12">
-                                    <a href="movies.html" class="pulse btn wow animated" id="movie-search-button">Movies</a>
-                                    <a href="games.html" class="pulse btn wow animated left-align" id="game-search-button">Games</a>
-                                    <a href="recipes.html" class="pulse btn wow animated right-align" id="food-search-button">Recipes</a>
+                                    <a href="movies.html" class="btn" id="movie-search-button">Movies</a>
+                                    <a href="games.html" class="btn left-align" id="game-search-button">Games</a>
+                                    <a href="recipes.html" class="btn right-align" id="food-search-button">Recipes</a>
                                 </div>
                             </div>
                             
