--- a/movies.html
+++ b/movies.html
@@ -60,11 +60,11 @@
                     <option value="Revenue">Revenue</option>
                 </select>
             </div>
-            <button class="pulse btn wow animated" type="submit" id = "movieSearch"><i class="fa fa-search"></i></button>
-            <button class="pulse btn wow animated" id = "randomButton">Random</button>
+            <button class="btn" type="submit" id = "movieSearch"><i class="fa fa-search"></i></button>
+            <button class="btn" id = "randomButton">Random</button>
             <h4>OR</h4>
             <input type = "text" placeholder = "Title" id = "title">
-            <button class="pulse btn wow animated" type="submit" id = "movieTitleSearch"><i class="fa fa-search"></i></button>
+            <button class="btn" type="submit" id = "movieTitleSearch"><i class="fa fa-search"></i></button>
         </form>
 
         <br><br>
@@ -74,7 +74,7 @@
         <div id="pages"></div>
 
         <br>
-        <button class="pulse btn wow animated" id="back-button" onclick="goBack()">Back</button>
+        <button class="btn" id="back-button" onclick="goBack()">Back</button>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
