--- a/recipes.html
+++ b/recipes.html
@@ -30,12 +30,12 @@
                 <label for="ingredient-search-input">Have some ingredients you want to use? List them here:</label>
                 <input type="text" class="form-control" id="ingredient-search-input" placeholder="ingredient 1, ingredient 2">
             </div>
-            <button type="submit" id="search-recipe-btn" class="pulse btn wow animated">Search</button>
+            <button type="submit" id="search-recipe-btn" class="btn">Search</button>
         </form>
 
         <p>OR</p>
 
-        <button id="random-recipe-btn" class="pulse btn wow animated">Show me a random recipe</button>
+        <button id="random-recipe-btn" class="btn">Show me a random recipe</button>
 
         <p id="error-message"></p>
     
@@ -43,7 +43,7 @@
 
         <div id="recipe-display"></div>
 
-        <button class="pulse btn wow animated" id="back-button" onclick="goBack()">Back</button>
+        <button class="btn" id="back-button" onclick="goBack()">Back</button>
 
     </div>
 
