--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="jumbotron">
-        <h1><span style="color:blue">L.</span><span style="color:red">I.</span><span style="color:yellowgreen">F.</span><span style="color:orange">E.</span></h1>
-        <h4><span style= "color:blue">L</span>iving <span style="color:red">I</span>nside <span style= "color:yellowgreen">F</span>or <span style="color:orange">E</span>ver</h4>
+        <h1 class="brand"><span style="color:blue">L.</span><span style="color:red">I.</span><span style="color:yellowgreen">F.</span><span style="color:orange">E.</span></h1>
+        <h4 class="brand"><span style= "color:blue">L</span>iving <span style="color:red">I</span>nside <span style= "color:yellowgreen">F</span>or <span style="color:orange">E</span>ver</h4>
         <br>
         <h5 style= color:white>Life is no fun without options <i class="fas fa-grin-wink" style="color:yellow"></i></h5>
     </header>
