edit main heading styles

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 </head>
 <body>
     <header class="jumbotron">
-        <h1 class="brand"><span style="color:blue">L.</span><span style="color:red">I.</span><span style="color:yellowgreen">F.</span><span style="color:orange">E.</span></h1>
-        <h4 class="brand"><span style= "color:blue">L</span>iving <span style="color:red">I</span>nside <span style= "color:yellowgreen">F</span>or <span style="color:orange">E</span>ver</h4>
+        <h1 class="brand"><span class="c0">L.</span><span class="c1">I.</span><span class="c2">F.</span><span class="c3">E.</span></h1>
+        <h4 class="brand"><span class="c0">L</span>iving <span class="c1">I</span>nside <span class="c2">F</span>or <span class="c3">E</span>ver</h4>
         <br>
-        <h5 style= color:white>Life is no fun without options <i class="fas fa-grin-wink" style="color:yellow"></i></h5>
+        <h5 style= color:white>Life is no fun without options <i class="fas fa-grin-wink c6"></i></h5>
     </header>
     <div class="container">
         <div class="row wow animated fadeIn">
