--- a/movies.html
+++ b/movies.html
@@ -11,12 +11,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+
+    <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="jumbotron">
-        <h1 style="font-size:80px"><span style="color:blue">M</span><span style="color:red">O</span><span style="color:yellowgreen">V</span><span style="color:orange">I</span><span style="color:lightskyblue">E</span><span style="color:purple">S</span></h1>
+        <h1 style="font-size:80px; letter-spacing: 0.02em;" class="brand"><span class="c0">M</span><span class="c1">O</span><span class="c2">V</span><span class="c3">I</span><span class="c4">E</span><span class="c5">S</span></h1>
         <br>        
-        <h4>Find your movies here <i class="fas fa-smile" style="color:yellow"></i></h4>
+        <h4>Find your movies here <i class="fas fa-smile c6"></i></h4>
     </header>
 
     <div class="container">
