--- a/recipes.html
+++ b/recipes.html
@@ -10,12 +10,14 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="jumbotron">
-        <h1 class="display-4"> <span style="color:blue">R</span><span style="color:red">E</span><span style="color:yellowgreen">C</span><span style="color:orange">I</span><span style="color:skyblue">P</span><span style="color:plum">E</span><span style="color:yellow">S</span></h1>
+        <h1 class="display-4 brand" style="letter-spacing: 0.02em;"> <span class="c0">R</span><span class="c1">E</span><span class="c2">C</span><span class="c3">I</span><span class="c4">P</span><span class="c5">E</span><span class="c6">S</span></h1>
         <br>
-        <h5>Sometimes you just need options other than cereal <i class="fas fa-grin-wink" style="color:yellow"></i></h5>
+        <h5>Sometimes you just need options other than cereal <i class="fas fa-grin-wink c6"></i></h5>
         
     </header>
 
