change recipe image

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <img src="https://i.pcmag.com/imagery/articles/00n0I7NojThD7LNdz31s0jH-8.fit_scale.size_1028x578.v1569486931.jpg" alt="video game controllers">
                     </a>
                     <a class="carousel-item" href="#two!">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRxbzDaNTEJkMsU2ufZcxU4jHPGg1BiiPIHbw&usqp=CAU" alt="plates of food">
+                        <img src="https://res.cloudinary.com/wegowordpress/image/upload/f_auto,q_auto/v1571386678/shutterstock_1060937360_pzbrjz.jpg" alt="plates of food">
                     </a>
                 </div>
             </div>
