make header font sizes uniform across pages

--- a/games.html
+++ b/games.html
@@ -17,9 +17,8 @@
 </head>
 <body>
     <header class="jumbotron">
-        <h1 style="font-size:80px; letter-spacing: 0.02em;" class="brand"><span class="c0">G</span><span class="c1">A</span><span class="c2">M</span><span class="c3">E</span><span class="c4">S</span></h1>
-        <br>        
-        <h4>Find your games here <i class="fas fa-smile c6"></i></h4>
+        <h1 class="display-4 brand" style="letter-spacing: 0.02em;"><span class="c0">G</span><span class="c1">A</span><span class="c2">M</span><span class="c3">E</span><span class="c4">S</span></h1>    
+        <h5>Find your games here <i class="fas fa-smile c6"></i></h5>
     </header>
 
     <div class="container">
